--- a/scss/molecules/tabs/_tabs.scss
+++ b/scss/molecules/tabs/_tabs.scss
@@ -84,7 +84,7 @@ Tabs
   margin-right: 2px;
   line-height: 1.42857143;
   border: 1px solid transparent;
-  border-radius: 4px 4px 0 0;
+  border-radius: 0;
 
   .badge {margin-left: 0.5em;}
 }
