--- a/scss/organisms/_feedback-buttons.scss
+++ b/scss/organisms/_feedback-buttons.scss
@@ -5,7 +5,6 @@
  - Spinner theme is optional. Default will have black dots
  - Used to provide feedback for UI buttons
 
-
 ```
 <button class="btn btn-alert">
   Watsapp
@@ -24,8 +23,6 @@
     <div class="bounce3"></div>
   </div>
 </button>
-
-
 ```
 
 */
@@ -37,4 +34,84 @@
 
 .btn.is-processing > .spinner {
   display: inline-block;
+}
+
+/*doc
+###Fixed width buttons
+ - In order to replace the content with the spinner, we need to use a fixed width button
+
+```
+
+<div class="btn-inline">
+  <button class="btn btn-secondary has-feedback">
+    <div class="feedback-text">Add to Wishlist</div>
+    <div class="feedback-spinner">
+      <div class="spinner spinner-secondary">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+      </div>
+    </div>
+  </button>
+  <button class="btn btn-primary has-feedback">
+    <div class="feedback-text">Add to bag</div>
+    <div class="feedback-spinner">
+      <div class="spinner spinner-primary">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+      </div>
+    </div>
+  </button>
+</div>
+
+```
+*/
+
+.has-feedback {
+  position: relative;
+  width: 12em;
+  height: 3.5em; //Roughly equal a regular button height
+  overflow: hidden;
+}
+
+.feedback-text {
+  @include transition-effect();
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  padding: 1em 0;
+
+  width: 100%;
+
+  text-align: center;
+}
+
+.feedback-spinner {
+  @include transition-effect();
+
+  position: absolute;
+  top: 100%;
+  left: 0;
+
+  padding: 1em 0;
+
+  width: 100%;
+
+  text-align: center;
+}
+
+.btn.is-processing {
+  pointer-events: none;
+}
+
+.is-processing {
+  .feedback-text {
+    top: -100%;
+  }
+  .feedback-spinner {
+    top: 0;
+  }
 }
