Scope .has-feedback class to buttons

--- a/scss/organisms/_feedback-buttons.scss
+++ b/scss/organisms/_feedback-buttons.scss
@@ -68,7 +68,7 @@
 ```
 */
 
-.has-feedback {
+.btn.has-feedback {
   position: relative;
   width: 12em;
   height: 3.5em; //Roughly equal a regular button height
