Include foundation grid
Create a sidebar and top bar markup

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 
 @import "atoms/reset";
 @import "atoms/grids";
+@import "atoms/fgrid";
 @import "atoms/animations";
 @import "atoms/helpers/utilities";
 
