--- a/scss/organisms/_modals.scss
+++ b/scss/organisms/_modals.scss
@@ -104,7 +104,7 @@ $modal-sm:                    300px !default;
   background-color: $modal-content-bg;
   border: 1px solid $modal-content-fallback-border-color; //old browsers fallback (ie8 etc)
   border: 1px solid $modal-content-border-color;
-  border-radius: $global-radius-2x;
+  border-radius: 0;
   box-shadow: 0 3px 9px rgba(0,0,0,.5);
   background-clip: padding-box;
   // Remove focus outline from opened modal
