--- a/scss/templates/header/_header.scss
+++ b/scss/templates/header/_header.scss
@@ -30,11 +30,21 @@
 
     margin-left: .5em;
 
+    border-radius: 50%;
+
+    @include transition-effect($timing: .1s);
+
     padding-top: 1em;
 
     text-align: center;
 
     box-shadow: 0 4px 10px 0 rgba(0,0,0,.1),0 2px 10px 0 rgba(0,0,0,.1);
+    outline: none;
+
+    &:active {
+      box-shadow: none;
+    }
+
   }
 }
 
@@ -46,6 +56,13 @@
 
   margin-left: 0.4em;
 
+  border-radius: 50%;
+
   vertical-align: bottom;
+
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 10px 0 rgba(0, 0, 0, 0.1);
+  &:active {
+    box-shadow: none;
+  }
 
 }
