--- a/scss/templates/header/_header.scss
+++ b/scss/templates/header/_header.scss
@@ -28,8 +28,6 @@
     width: 3em;
     height: 3em;
 
-    margin-left: .5em;
-
     border-radius: 50%;
 
     @include transition-effect($timing: .1s);
@@ -42,7 +40,7 @@
     outline: none;
 
     &:active {
-      box-shadow: none;
+      box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 2px 10px 0 rgba(0, 0, 0, 0.1);
     }
 
   }
@@ -54,15 +52,16 @@
   width: 3em;
   height: 3em;
 
-  margin-left: 0.4em;
+  margin-left: 1em;
 
   border-radius: 50%;
 
   vertical-align: bottom;
 
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 10px 0 rgba(0, 0, 0, 0.1);
+  outline: none;
   &:active {
-    box-shadow: none;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 2px 10px 0 rgba(0, 0, 0, 0.1);
   }
 
 }
