UI fixes for header section

--- a/scss/organisms/_breadcrumbs.scss
+++ b/scss/organisms/_breadcrumbs.scss
@@ -16,7 +16,7 @@ $breadcrumb-color: $brand-primary;
 .breadcrumbs {
   display: block;
   margin: 0;
-  padding: 1em 0;
+  padding: 0;
 
   list-style: none;
 
