--- a/scss/templates/header/_header.scss
+++ b/scss/templates/header/_header.scss
@@ -23,19 +23,16 @@
 .top-nav-icons {
   display: inline-block;
   > a:not(.avatar) {
-    display: block;
-
-    width: 3em;
-    height: 3em;
-
-    border-radius: 50%;
-
     @include transition-effect($timing: .1s);
 
+    display: block;
+    width: 3em;
+    height: 3em;
+    margin-left: .4em;
     padding-top: 1em;
 
+    border-radius: 50%;
     text-align: center;
-
     box-shadow: 0 4px 10px 0 rgba(0,0,0,.1),0 2px 10px 0 rgba(0,0,0,.1);
     outline: none;
 
@@ -52,7 +49,7 @@
   width: 3em;
   height: 3em;
 
-  margin-left: 1em;
+  margin-left: .4em;
 
   border-radius: 50%;
 
