--- a/scss/templates/navbar/_navbar.scss
+++ b/scss/templates/navbar/_navbar.scss
@@ -50,6 +50,8 @@
   }
 }
 
-.navbar-search {
-  padding-top: 1.25em !important;
+input.search-all {
+  width: 75%;
+  padding: .6em;
+  margin-right: -0.3em;
 }
