Add search button in the top middle

--- a/scss/atoms/_grids.scss
+++ b/scss/atoms/_grids.scss
@@ -92,7 +92,7 @@ $sidebar-collapsed-width: em-calc(50px);
 }
 
 .section-content {
-  margin-top: 8em;
+  margin-top: 7.5em;
 }
 
 .content-wrap {
@@ -114,7 +114,7 @@ $sidebar-collapsed-width: em-calc(50px);
   display: inline-block;
 }
 .products-title-container {
-  padding: 1em;
+  padding: 0 1em;
   padding-bottom: 0;
 }
 
