--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,6 +59,7 @@
 @import "templates/sidenav/sidenav";
 @import "templates/search/search";
 @import "templates/toolbar/toolbar";
+@import "templates/login/login";
 
 // Import pages
 
