--- a/scss/molecules/forms/_variables.scss
+++ b/scss/molecules/forms/_variables.scss
@@ -5,5 +5,5 @@
 $form-outline-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
 $form-background: $white;
 $form-border: 1px solid nth($grey-light, 2);
-$form-border-focus: 1px solid $blue;
+$form-border-focus: 1px solid $brand-info;
 $form-border-radius: $global-radius;
