--- a/scss/templates/header/_header.scss
+++ b/scss/templates/header/_header.scss
@@ -9,7 +9,7 @@
   width: 120px;
   height: 120px;
 
-  background: url('../images/logo.png') no-repeat;
+  background: url('../img/logo.png') no-repeat;
   background-size: 100%;
 
   @include hide-text();
