--- a/scss/templates/login/_login.scss
+++ b/scss/templates/login/_login.scss
@@ -42,3 +42,27 @@
   right: 3em;
   top: 0.2em;
 }
+
+.login-container {
+  width: 250px;
+  margin: 0 auto;
+  height: 100%;
+  padding-top: 6em;
+}
+
+.login-meta {
+  float: left;
+  width: 100%;
+  margin-bottom: 1em;
+}
+
+.login-forgot {
+  width: 50%;
+  float: right;
+  text-align: right;
+}
+
+.login-remember {
+  width: 50%;
+  float: left;
+}
