Create markup and styles for register - landing page
Include image asset
Include dropzone and skrollr libraries

--- a/scss/molecules/forms/_forms.scss
+++ b/scss/molecules/forms/_forms.scss
@@ -27,7 +27,7 @@
 ```
 */
 
-input:not([type]), input[type="color"], input[type="email"], input[type="number"], input[type="password"], input[type="tel"], input[type="url"], input[type="text"] {
+textarea, input:not([type]), input[type="color"], input[type="email"], input[type="number"], input[type="password"], input[type="tel"], input[type="url"], input[type="text"] {
    @include form-elements();
 }
 
