--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,6 +61,7 @@
 @import "templates/search/search";
 @import "templates/toolbar/toolbar";
 @import "templates/login/login";
+@import "templates/register";
 
 // Import pages
 
