In the press design

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,6 +62,7 @@
 @import "templates/toolbar/toolbar";
 @import "templates/login/login";
 @import "templates/register";
+@import "templates/in-the-press";
 
 // Import pages
 
