--- a/scss/templates/header/_header.scss
+++ b/scss/templates/header/_header.scss
@@ -29,7 +29,7 @@
     width: 3em;
     height: 3em;
     margin-left: .4em;
-    padding-top: 1em;
+    padding-top: .75em;
 
     border-radius: 50%;
     text-align: center;
