Delete operation for in the press screen

--- a/scss/atoms/_animations.scss
+++ b/scss/atoms/_animations.scss
@@ -88,3 +88,7 @@ Using the class `.ajax-call` and some scripting, we can achieve the AJAX loading
   width: 18px;
   height: 18px;
 }
+
+.animating {
+  transition: none; // Disable CSS transitions on items animated via velocity
+}
