--- a/scss/organisms/_growl.scss
+++ b/scss/organisms/_growl.scss
@@ -13,9 +13,7 @@
 
 // Override growl
 .growl {
-  border-radius: 0;
-  opacity: 0.9;
-  filter: alpha(opacity=90);
+  border-radius: 0 !important;
   &.growl-default {@include paint(background, $brand-primary !important)} // Primary
   &.growl-error {@include paint(background, $brand-alert !important)} //Alert
   &.growl-warning {@include paint(background, $brand-warning !important)}
