--- a/scss/templates/sidenav/_sidenav.scss
+++ b/scss/templates/sidenav/_sidenav.scss
@@ -35,10 +35,11 @@ $sidenav-padding: .6em 0;
     font-size: 1.5em;
   }
 
-  > li {
+  > li a {
 
     border-left: 4px solid transparent;
     display: block;
+    width: 100%; // After velocity animates
 
     padding: $sidenav-padding;
 
